[package]
name = "cardano-web-wallet-analyser"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/cardano-web-wallet-analyser"
homepage = "https://primetype.github.io/cardano-web-wallet-analyser"
keywords = ["web", "webasm", "cardano", "dApp", "CIP-30"]
categories = ["gui", "wasm", "web-programming"]
description = "A web application for analysing the security integrity of a cardano wallet connecting to the wallet using CIP30."
readme = "README.md"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11"
getrandom = { version = "0.3", features = ["wasm_js"] }
cardano-connector = "=0.2.0"

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
hex = "0.4.3"
pallas-addresses = "0.32.0"
web-sys = { version = "0.3.77", features = ["Window", "MediaQueryList"] }
